--- a/.github/workflows/publish-tag.yml
+++ b/.github/workflows/publish-tag.yml
@@ -37,4 +37,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd site-files
-          gh release create ${{ github.ref_name }}
+          gh release create ${{ github.ref_name }} --generate-notes
