Generator v2.3.0 sync + versioned links

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -3,9 +3,12 @@ changelog:
     authors:
       - octocat
   categories:
-    - title: New Features
+    - title: Enhancements
       labels:
-        - new feature
+        - enhancement
+    - title: New Content
+      labels:
+        - new content
     - title: Bug Fixes
       labels:
         - bug fix
